--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -8,6 +8,24 @@ body {
   min-width: 752px;
 }
 
+button {
+  width: 100%;
+  height: 50px;
+  background-color: #2196f3;
+  color: white;
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 0.5px;
+  border-radius: 5px;
+  border-style: none;
+  margin-bottom: 20px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #63b0f0;
+  }
+}
+
 .App {
   background-color: #f3f7fa;
 }
@@ -98,9 +116,11 @@ body {
     border-style: none;
     border-right: 1px solid #dfe5ec;
     cursor: pointer;
+    border-radius: 0;
 
     &:hover {
       background-color: #f1fcff;
+      box-shadow: none;
     }
 
     &:hover:last-child {
@@ -137,6 +157,7 @@ body {
     height: 184px;
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
+    margin-bottom: 20px;
   }
 
   table {
