--- a/src/index.scss
+++ b/src/index.scss
@@ -1,1 +1,28 @@
 @import './normalize.css';
+* {
+  box-sizing: border-box;
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+}
+
+body {
+  min-width: 500px;
+}
+
+button {
+  width: 100%;
+  height: 50px;
+  background-color: #2196f3;
+  color: white;
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 0.5px;
+  border-radius: 5px;
+  border-style: none;
+  margin-bottom: 20px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #196eb4;
+  }
+}
