--- a/src/components/ticket-list/TicketList.module.scss
+++ b/src/components/ticket-list/TicketList.module.scss
@@ -39,3 +39,20 @@
     text-transform: uppercase;
   }
 }
+
+.alert-message {
+  width: 500px;
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.spinner {
+  top: 0;
+  left: 0;
+  margin-bottom: 15px;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  overflow: hidden;
+}
